--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,6 @@
 body {
+  background-color: #303030;
+  color: azure;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +12,7 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+h1{
+  margin-top: 5rem;
 }
